removed the navBar overlap issue

--- a/src/components/navBar.css
+++ b/src/components/navBar.css
@@ -16,6 +16,7 @@ nav {
   background-color: var(--boxBackground);
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .brandIcon {
